CIR-I2681 | calendar icon overlapping issue fixed

--- a/src/components/commonCss/global.scss
+++ b/src/components/commonCss/global.scss
@@ -842,6 +842,13 @@ a:hover {
       font-weight: 500;
     }
   }
+.ag-ltr .ag-floating-filter-button {
+  margin-left: 4px !important;
+}
+input[type="date"].ag-input-field-input {
+    padding-bottom:0!important ;
+    min-width: 95px;
+}
 }
 .ag-root-wrapper-body.ag-layout-normal {
   border: 1px solid #e5eaf9;
